--- a/push_to_back.html
+++ b/push_to_back.html
@@ -6,37 +6,9 @@
     <title>File Upload</title>
 </head>
 <body>
-    <h2>Upload a File</h2>
-    <form id="uploadForm" enctype="multipart/form-data">
-        <input type="file" id="fileInput" name="file">
-        <button type="button" onclick="uploadFile()">Upload File</button>
+    <form action="/upload" method="post" enctype="multipart/form-data">
+        <input type="file" name="file">
+        <button type="submit">Upload</button>
     </form>
-
-    <script>
-        function uploadFile() {
-            const fileInput = document.getElementById('fileInput');
-            const file = fileInput.files[0];
-            
-            const formData = new FormData();
-            formData.append('file', file);
-
-            fetch('/upload', {
-                method: 'POST',
-                body: formData
-            })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                return response.json();
-            })
-            .then(data => {
-                console.log('File uploaded successfully:', data);
-            })
-            .catch(error => {
-                console.error('There was a problem with the file upload:', error);
-            });
-        }
-    </script>
 </body>
 </html>
