--- a/push_to_back.html
+++ b/push_to_back.html
@@ -6,7 +6,7 @@
     <title>File Upload</title>
 </head>
 <body>
-    <form action="/upload" method="post" enctype="multipart/form-data">
+    <form action="http://127.0.0.1:8000/upload" method="post" enctype="multipart/form-data">
         <input type="file" name="file">
         <button type="submit">Upload</button>
     </form>
