--- a/push_to_back.html
+++ b/push_to_back.html
@@ -17,26 +17,24 @@
             const fileInput = document.getElementById('fileInput');
             const file = fileInput.files[0];
             
+            console.log(file)
             const formData = new FormData();
             formData.append('file', file);
 
-            fetch('/upload', {
+            fetch('http://127.0.0.1:8000/upload', {
                 method: 'POST',
                 body: formData
             })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                return response.json();
-            })
+            .then(response => response.json())
             .then(data => {
-                console.log('File uploaded successfully:', data);
+                document.getElementById('dataContainer').innerText = data.result;
             })
             .catch(error => {
                 console.error('There was a problem with the file upload:', error);
             });
         }
     </script>
+    <div id="dataContainer"></div>
+
 </body>
 </html>
