--- a/push_to_back.html
+++ b/push_to_back.html
@@ -11,7 +11,7 @@
         <input type="file" id="fileInput" name="file">
         <button type="button" onclick="uploadFile()">Upload File</button>
     </form>
-    <div id="dataContainer"></div>
+
     <script>
         function uploadFile() {
             const fileInput = document.getElementById('fileInput');
@@ -27,19 +27,15 @@
             })
             .then(response => response.json())
             .then(data => {
+                console.log(data)
                 document.getElementById('dataContainer').innerText = data.result;
             })
             .catch(error => {
                 console.error('There was a problem with the file upload:', error);
             });
         }
-    console.log(document.getElementById('dataContainer').innerText)
-
     </script>
-<<<<<<< HEAD
     <div id="dataContainer"></div>
-=======
->>>>>>> 75420e14ba00e4fc672224dc549ae7012c7294dc
 
 </body>
 </html>
