--- a/push_to_back.html
+++ b/push_to_back.html
@@ -31,7 +31,7 @@
           .then((response) => response.text())
           .then((data) => {
             console.log(data);
-            document.getElementById("dataContainer").innerText = data.result;
+            document.getElementById("dataContainer").innerText = data;
           })
           .catch((error) => {
             console.error("There was a problem with the file upload:", error);
