--- a/push_to_back.html
+++ b/push_to_back.html
@@ -1,16 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>File Upload</title>
-  </head>
-  <body>
-    <h2>Upload a File</h2>
-    <form id="uploadForm" enctype="multipart/form-data">
-      <input type="file" id="fileInput" name="file" />
-      <button type="button" onclick="uploadFile()">Upload File</button>
-    </form>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>File Upload</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <link rel="stylesheet" href="default.css">
+        <style>
+            body{
+                .navbar-brand {
+                margin-left: 20px; /* Adjust the left margin */
+            }
+
+            .navbar-toggler {
+                margin-right: 10px; /* Reset right margin to zero */
+            }    
+
+            }
+        </style>
+    </head>
+    <body style="font-family: Ubuntu, sans-serif; 
+        background-image:url('오른쪽\ 패치워크.png'),url('왼쪽\ 패치워크.png');
+        background-repeat : no-repeat;
+        background-position: 100% 15%, 0% 15%;
+        background-size: 470px,400px; overflow-y: hidden;">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+            <a class="navbar-brand" href="#">Lovecal</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Link
+                    </a>
+                    <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true">Link</a>
+                </li>
+                </ul>
+                <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+            </div>
+        </nav>        
+        <div style="text-align: center; margin-top: 50px; font-size: 50px !important;">
+            공유 캘린더로 추억을 나누세요<br>
+            <i class="bi bi-calendar-heart" style="font-size:20rem; margin-top: -100px;";></i>
+        </div>
+                <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
+            <div style="margin-right: 30px;">
+                <button type="button" class="btn btn-outline-info" style="font-size: 20px; padding: 30px 20px; width: 200px; margin-bottom: 750px;">
+                    <label for="fileInput">Upload<br>A Calendar</label>
+                    <input type="file" id="fileInput" accept=".csv" style="display: none;">
+                </button>
+            </div>
+            <div>
+                <button type="button" class="btn btn-outline-info" style="font-size: 20px; padding: 30px 20px; width: 200px; margin-bottom: 750px;" onclick="uploadFile()">See Result</button>
+            </div>
+        </div>
+                
+
+
 
     <script>
       function uploadFile() {
@@ -32,6 +109,13 @@
           .then((data) => {
             console.log(data);
             document.getElementById("dataContainer").innerText = data;
+            var variable1 = data;
+            // Construct URL with parameters
+            var destinationUrl = "main.html";
+            destinationUrl += "?variable1=" + encodeURIComponent(variable1);
+
+            // Navigate to destination page
+            window.location.href = destinationUrl;
           })
           .catch((error) => {
             console.error("There was a problem with the file upload:", error);
