--- a/push_to_back.html
+++ b/push_to_back.html
@@ -98,7 +98,7 @@
         const formData = new FormData();
         formData.append("file", file);
 
-        fetch("http://127.0.0.1:8000/upload", {
+        fetch("http://localhost:8000/upload", {
           method: "POST",
           body: formData,
           headers: {
