--- a/Hdqw.html
+++ b/Hdqw.html
@@ -59,9 +59,9 @@
           </ul>
         </div>
       </nav>
-    <form action="/submit_radio" method="post">
+    <form action="http://127.0.0.1:8000/submit_radio" method="post">
       <input type="radio" id="3/25" value="20240325", name="Choice">
-      <label for="3/25">eval(2024/03/25</label><br>
+      <label for="3/25">eval(2024/03/25)</label><br>
       <input type="radio" id="3/28" value="20240328", name="Choice">
       <label for="3/28">2024/03/28</label><br>
       <input type="radio" id="3/31" value="20230331", name="Choice">
